# internal/handler/handler.go
@@ -1,6 +1,7 @@
 package handler
 
 import (
+	"nTime/internal/device"
 	"nTime/internal/hijrimonth"
 	"nTime/internal/schedule"
 
@@ -11,11 +12,13 @@ type Server struct {
 	cities   *city.Repository
 	schedule *schedule.Service
 	hijri    *hijrimonth.Service
+	devices  *device.Service
 	app      AppInfo
 }
 
-func NewServer(cityRepo *city.Repository, scheduleSvc *schedule.Service, hijriSvc *hijrimonth.Service, app AppInfo) *Server {
-	return &Server{cities: cityRepo, schedule: scheduleSvc, hijri: hijriSvc, app: app}
+func NewServer(cityRepo *city.Repository, scheduleSvc *schedule.Service, hijriSvc *hijrimonth.Service,
+	deviceSvc *device.Service, app AppInfo) *Server {
+	return &Server{cities: cityRepo, schedule: scheduleSvc, hijri: hijriSvc, devices: deviceSvc, app: app}
 }
 
 var _ StrictServerInterface = (*Server)(nil)
